--- a/Nshop/mainapp/templates/base.html
+++ b/Nshop/mainapp/templates/base.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <nav class="navbar navbar-expand-lg" style="background-color: #adb5bd;" >
             <div class="container-fluid">
               <a class="navbar-brand" href="{% url 'homepage' %}">Nshop</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
