--- a/Nshop/mainapp/templates/home.html
+++ b/Nshop/mainapp/templates/home.html
@@ -24,7 +24,11 @@
                <img class="card-img-top" src="{{product.img.url}}" alt="Picture of {{product.name}}">
            </div>
            <div class="row card-body h-50">
-               <h5>{{product.name}}</h5>
+               <h5>
+                    <a href="">
+                        {{product.name}}
+                    </a>
+                </h5>
                <p class="card-text">
                    Rs. {{product.price}}
                </p>
