login page added

--- a/Nshop/mainapp/templates/home.html
+++ b/Nshop/mainapp/templates/home.html
@@ -25,7 +25,7 @@
            </div>
            <div class="row card-body h-50">
                <h5>
-                    <a href="">
+                    <a href="{% url 'prod_details' product.pk %}">
                         {{product.name}}
                     </a>
                 </h5>
