--- a/Nshop/mainapp/templates/base.html
+++ b/Nshop/mainapp/templates/base.html
@@ -39,19 +39,32 @@
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-                    <a class="nav-link" href="{% url 'add_product' %}">Add Product</a>
-                  </li>
+                  
                 </ul>
                 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    {% if user.is_authenticated %}
+                    {% if user.is_staff %}
+                      <li class="nav-item">
+                        <a class="nav-link" href="{% url 'add_product' %}">Add Product</a>
+                      </li>
+                      {% endif %}
+                    <li class="nav-item">
+                      <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-link">Logout</button>
+                      </form>
+                    </li>
+                    
+                    {% else %}
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'signin' %}">Log in</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="{% url 'signup' %}">Register</a>
                   </li>
+                  {% endif %}
                 </ul>
 
                 <form class="d-flex" role="search">
