--- a/Nshop/mainapp/templates/base.html
+++ b/Nshop/mainapp/templates/base.html
@@ -11,6 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- linking custom stylesheet -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <!-- linking javascript -->
+    <script src="{% static 'js/script.js' %}"></script>
   </head>
   <body>
     <header>
